--- a/app/src/main/res/layout/activity_lectura.xml
+++ b/app/src/main/res/layout/activity_lectura.xml
@@ -109,9 +109,11 @@
             android:orientation="vertical"></LinearLayout>
 
         <LinearLayout
+            android:id="@+id/LayoutLineSetPrincipal"
             android:layout_width="match_parent"
             android:layout_height="85dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="invisible">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -182,10 +184,11 @@
                             android:orientation="vertical">
 
                             <TextView
-                                android:id="@+id/tx"
+                                android:id="@+id/tvCantidad"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="/" />
+                                android:text="/"
+                                android:textSize="18sp" />
                         </LinearLayout>
 
                         <LinearLayout
