--- a/app/src/main/res/layout/activity_packing.xml
+++ b/app/src/main/res/layout/activity_packing.xml
@@ -67,6 +67,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:onClick="btnCodigoBarras_Click"
                         android:text=">>" />
                 </LinearLayout>
 
@@ -302,6 +303,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:onClick="btPiezas_Click"
                         android:text=">>" />
                 </LinearLayout>
 
@@ -355,6 +357,7 @@
                             android:layout_height="44dp"
                             android:layout_weight="1"
                             android:background="#00FFFFFF"
+                            android:onClick="btLimpiar_Click"
                             android:src="@drawable/trash"
                             tools:src="@drawable/trash"
                             tools:srcCompat="@drawable/trash" />
