--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -158,29 +158,68 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="144dp"
+                    android:layout_width="140dp"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"></LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="104dp"
+                    android:layout_width="124dp"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
                     <Button
                         android:id="@+id/btnLog"
-                        android:layout_width="wrap_content"
+                        android:layout_width="124dp"
                         android:layout_height="wrap_content"
                         android:insetLeft="0dp"
                         android:onClick="Log"
-                        android:text="Button" />
+                        android:text="Ingresar" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="160dp"
+                    android:layout_width="140dp"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"></LinearLayout>
             </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="73dp"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="140dp"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"></LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="165dp"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="58dp"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/btConfig"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:background="@drawable/configuracion"
+                        android:backgroundTint="#000000"
+                        android:onClick="config" />
+                </LinearLayout>
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
