--- a/app/src/main/res/layout/activity_packing.xml
+++ b/app/src/main/res/layout/activity_packing.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/espacio4"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 
     <LinearLayout
         android:id="@+id/contenedorPrincipal"
-        android:layout_width="410dp"
-        android:layout_height="730dp"
+        android:layout_width="409dp"
+        android:layout_height="729dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,7 +20,7 @@
         <LinearLayout
             android:id="@+id/LayoutVacio"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="20dp"
             android:orientation="vertical"></LinearLayout>
 
         <LinearLayout
@@ -53,7 +53,7 @@
                         android:layout_weight="1"
                         android:ems="10"
                         android:hint="Código de Barras"
-                        android:inputType="textPersonName" />
+                        android:inputType="number" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -82,7 +82,7 @@
         <LinearLayout
             android:id="@+id/LayoutVacio2"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="20dp"
             android:orientation="vertical"></LinearLayout>
 
         <LinearLayout
@@ -150,7 +150,7 @@
         <LinearLayout
             android:id="@+id/LayoutVacio3"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="20dp"
             android:orientation="vertical"></LinearLayout>
 
         <LinearLayout
@@ -215,7 +215,7 @@
         <LinearLayout
             android:id="@+id/conntenedor"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="20dp"
             android:orientation="vertical"></LinearLayout>
 
         <LinearLayout
@@ -247,7 +247,7 @@
                         android:layout_weight="1"
                         android:ems="10"
                         android:hint="Número de Delivery"
-                        android:inputType="textPersonName" />
+                        android:inputType="number" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -260,7 +260,7 @@
         <LinearLayout
             android:id="@+id/layoutVacio5"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="20dp"
             android:orientation="vertical"></LinearLayout>
 
         <LinearLayout
@@ -317,7 +317,7 @@
         <LinearLayout
             android:id="@+id/LayoutVacio6"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="20dp"
             android:orientation="vertical"></LinearLayout>
 
         <LinearLayout
@@ -351,16 +351,13 @@
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
 
-                        <ImageButton
-                            android:id="@+id/btnClean"
-                            android:layout_width="86dp"
-                            android:layout_height="44dp"
+                        <Button
+                            android:id="@+id/button2"
+                            android:layout_width="40dp"
+                            android:layout_height="50dp"
                             android:layout_weight="1"
-                            android:background="#00FFFFFF"
-                            android:onClick="btLimpiar_Click"
-                            android:src="@drawable/trash"
-                            tools:src="@drawable/trash"
-                            tools:srcCompat="@drawable/trash" />
+                            android:background="@drawable/trash"
+                            android:onClick="btLimpiar_Click" />
                     </LinearLayout>
 
                     <LinearLayout
